--- a/package.json
+++ b/package.json
@@ -40,7 +40,12 @@
     "delay": "2500",
     "env": {
       "NODE_ENV": "develovment",
-      "PORT": "3000"
+      "PORT": 8080,
+      "MYSQL_PORT": 5000,
+      "MYSQL_HOST": "localhost",
+      "MYSQL_USER": "root",
+      "MYSQL_PASSWORD": "password",
+      "MYSQL_DATABASE": "Login"
     }
   }
 }
